# web-flow

./: .env.dev  .env.template  Dockerfile  docker-compose.yml  note.md  readme.md
workspace/: .cursorrules  .gitignore  README.md  entrypoint.sh  pyproject.toml  settings.json
workspace/src/: run.py
workspace/src/common/base/: singleton.py
workspace/src/common/constants/: discord.py
workspace/src/common/helper/: api_helper.py  data_helper.py  file_helper.py  logger.py  resource_helper.py  setting_helper.py
workspace/src/tools/: encrypt_local_resources.py  tag_workflows.py
workspace/src/workflows/: registry.py  workflow_ids.json
workspace/src/workflows/base/: base_work_flow.py
workspace/src/workflows/crawl-best-carton/: crawl_product_workflow.py
workspace/src/workflows/crawl-best-carton/services/: __init__.py  product_parser.py
workspace/src/workflows/crawl-best-carton/sub_workflow/: crawl_html_workflow.py
workspace/src/workflows/crawl-best-carton/sub_workflow/resources/: site-map.html
workspace/src/workflows/crawl-best-carton/sub_workflow/services/: __init__.py  box_url_tracker.py  site_map_parser.py
workspace/src/workflows/login_bao_tang_truyen_tranh/: login_workflow.py  settings.json
workspace/src/workflows/package_optimizing/: bin_package_workflow.py
workspace/src/workflows/package_optimizing/resources/: sizes.json
workspace/src/workflows/package_optimizing/services/: __init__.py  bin_packaging_service.py  bin_usage_csv_export_service.py  bin_usage_statistics_service.py  discord_file_upload_service.py
(+4 files in other folders)
