[project]
name = "webflow"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "qscvdefb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright (>=1.55.0,<2.0.0)",
    "py3dbp (>=1.1.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "workflows", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
